# python-skill

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  study.py  threading_sample.py
DeepLearning/: activation_functions.py  mnist_show.py
FluentPython/: clock.py  decorator.py  vol1.py
Pythonic/chapter1/: inpuit.py  str_format.py
Pythonic/chapter3/: 22.py  23.py  24.py
algorithm/: fixed_queue.py  open_hashing.py  que_program.py  search.py  stack.py
scripts/common/: installer.sh  lint.cmd
