[tool.poetry]
name = "python-skill"
version = "0.1.0"
description = ""
authors = ["Lee"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"




[tool.poetry.dev-dependencies]
pytest = "^5.2.5"
#isort = {version = "^5.10.1", markers = "sys_platform == 'win32'"  }
#black = { version = "21.11b1", markers = "sys_platform == 'win32'"  }
#pylint = { version = "^2.12.1", markers = "sys_platform == 'win32'" }

isort = "^5.10.1"
black = "21.11b1"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
